[package]
name = "lightmon"
version = "0.1.3"
authors = ["Reagan McFarland <me@reaganmcf.com>", "Alay Shah"]
description = "A lightweight, cross-platform, language-agnostic 'run code on file change' tool, inspired by Nodemon"
homepage = "https://github.com/reaganmcf/lightmon"
documentation = "https://docs.rs/lightmon"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["dev-tools", "nodemon", "productivity", "file-monitoring"]
edition = "2018"
exclude = [
  ".github/*",
  "assets/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.12" 
clap = {version = "~2.27.0", features = ["yaml"]}
assert_cmd = "1.0.3"
predicates = "1"
walkdir = "2"
log = "0.4.0"
env_logger = "0.8.3"
