[package]
name = "lightmon"
version = "0.2.0"
authors = ["Reagan McFarland <me@reaganmcf.com>", "Alay Shah"]
description = "A lightweight, cross-platform, language-agnostic 'run code on file change' tool, inspired by Nodemon"
homepage = "https://github.com/reaganmcf/lightmon"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["dev-tools", "nodemon", "productivity", "file-monitoring"]
edition = "2018"
exclude = [
  ".github/*",
  "assets/*"
]

[dependencies]
notify = "4.0.12" 
clap = {version = "~2.27.0", features = ["yaml"]}
walkdir = "2"
colored = "2"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0.3"
serial_test = "0.5.1"
